Testeando colores y paleta

--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
                 </ul>
             </div>
     </nav>
+    <div class="textsize"><p >Esta es una <span class="colorfont1">muestra</span> de los <span class="colorfont2">colores</span> usados en <span class="colorfont3">algunas</span> palabras para ver <span class="colorfont4"> tal se ven.</span></p>
+    <p>Se pueden <span class="colorfont5">modificar fácilmente</span> para ir testeando <span class="colorfont6">los colores.</span></p></div>
+    <div class="colorbar">
+        <div class="color1"><p class="fonttitle">Faded Denim</p></div>
+        <div class="color2"><p class="fonttitle">Negro</p></div>
+        <div class="color3"><p class="fonttitle">Huevo</p></div>
+        <div class="color4"><p class="fonttitle">Verdesa</p></div>
+        <div class="color5"><p class="fonttitle">Gris fondo</p></div>
+        <div class="color6"><p class="fonttitle">Rosa suave</p></div>
+    </div>
 </body>
 </html>
