--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirso Personal</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="ico" href="/img/icon.png">
+    <link rel="shortcut icon" type="ico" href="img/icon.png">
 </head>
 <body>
     <nav class="nav">
-            <div class="icon-container"><img class="icon" src="/img/icon.png" alt="personal logo"></div>
+            <div class="icon-container"><img class="icon" src="img/icon.png" alt="personal logo"></div>
             <div class="nav-list">
                 <ul>
                 <li class="nav-items"><a href="#" alt="Servicios"></a>Servicios</li>
