--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <div class="color1"><p class="fonttitle">Faded Denim</p></div>
         <div class="color2"><p class="fonttitle">Negro</p></div>
         <div class="color3"><p class="fonttitle">Huevo</p></div>
+    </div>
+    <div class="colorbar">
         <div class="color4"><p class="fonttitle">Verdesa</p></div>
         <div class="color5"><p class="fonttitle">Gris fondo</p></div>
         <div class="color6"><p class="fonttitle">Rosa suave</p></div>
