--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="nav-items"><a href="#" alt="Servicios"></a>Servicios</li>
                 <li class="nav-items"><a href="#" alt="Registro de Marcas"></a>Registro de Marcas</li>
                 <li class="nav-items"><a href="#" alt="Sobre mí"></a>Sobre mí</li>
-                <li class="nav-items"><a href="#" alt="Blog"></a>Blog</l>
+                <li class="nav-items"><a href="#" alt="Blog"></a>Articulos</l>
                 <li class="nav-items callto"><a href="#" alt="Contacto"></a>Contacto</li>
                 </ul>
             </div>
