--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tirso es un profesional del marketing digital, ecommerce y propiedad industrial.">
     <title>Tirso Personal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="ico" href="img/icon.png">
@@ -21,17 +22,37 @@
                 </ul>
             </div>
     </nav>
-    <div class="textsize"><p >Esta es una <span class="colorfont1">muestra</span> de los <span class="colorfont2">colores</span> usados en <span class="colorfont3">algunas</span> palabras para ver <span class="colorfont4"> tal se ven.</span></p>
-    <p>Se pueden <span class="colorfont5">modificar fácilmente</span> para ir testeando <span class="colorfont6">los colores.</span></p></div>
-    <div class="colorbar">
-        <div class="color1"><p class="fonttitle">Faded Denim</p></div>
-        <div class="color2"><p class="fonttitle">Negro</p></div>
-        <div class="color3"><p class="fonttitle">Huevo</p></div>
+<!--Color testing-->
+    <div class="cajacolores">
+        <div class="textsize"><p >Esta es una <span class="colorfont1">muestra</span> de los <span class="colorfont2">colores</span> usados en <span class="colorfont3">algunas</span> palabras para ver <span class="colorfont4"> tal se ven.</span></p>
+        <p>Se pueden <span class="colorfont5">modificar fácilmente</span> para ir testeando <span class="colorfont6">los colores.</span></p></div>
+        <div class="colorbar">
+            <div class="color1"><p class="fonttitle">Faded Denim</p></div>
+            <div class="color2"><p class="fonttitle">Negro</p></div>
+            <div class="color3"><p class="fonttitle">Huevo</p></div>
+        </div>
+        <div class="colorbar">
+            <div class="color4"><p class="fonttitle">Verdesa</p></div>
+            <div class="color5"><p class="fonttitle">Gris fondo</p></div>
+            <div class="color6"><p class="fonttitle">Rosa suave</p></div>
+        </div>
     </div>
-    <div class="colorbar">
-        <div class="color4"><p class="fonttitle">Verdesa</p></div>
-        <div class="color5"><p class="fonttitle">Gris fondo</p></div>
-        <div class="color6"><p class="fonttitle">Rosa suave</p></div>
+    <!--First Section-->
+    <div class="impar">
+        <div>
+            <img class="working" src="img/working.svg">
+        </div>
+        <div class="caja">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+    <div class="par">
+        <div>
+            <p>This section</p>
+        </div>
+        <div>
+            <img class="working" src="img/working.svg">
+        </div>
     </div>
 </body>
 </html>
