--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     </div>
     <div><p class="disclaimer">All reviews have been collected by <a href="#">Shopper's Approved</a>, an individual third party.</p></div>
     <div><img class="reviewimage" src="img/shopperapproved.jpg"></div>
-    <div class="footerblock">
-        <div><p>Footer Content</p></div>
+    <div>
+        <div class="footerblock"><p>Footer Content</p></div>
     </div>
 </body>
 </html>
