Seccion Reviews improvement

--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
         <div>
             <p class="reviewname">Mi madre</p>
             <p class="reviewdate">11 Dec 2020</p>
-            <div class="reviewcontent"><p>Buenísimo! Profesional, detallista, una elección perfecta para cualquier proyecto.<p>4 estrellas, por no llamar lo suficiente.</p></div>
+            <div class="reviewcontent"><p>Buenísimo! Profesional, detallista, una elección perfecta para cualquier proyecto.<p>4 estrellas, por que no me llama lo suficiente.</p></div>
             <div class="reviewstars">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#EB7100" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#EB7100" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#EB7100" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#EB7100" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#EB7100" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 12.705 512 486.59" x="0px" y="0px" xml:space="preserve" width="22px" height="22px" fill="#DCDCDC" style="margin-left: 0px;"><polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon></svg>
+            <polygon points="256.814,12.705 317.205,198.566 512.631,198.566 354.529,313.435 414.918,499.295 256.814,384.427 98.713,499.295 159.102,313.435 1,198.566 196.426,198.566 "></polygon>
             </div>
         </div>
         <div>
-            <p>.</p> <p>.</p> <p>.</p> <p>.</p><p>.</p>
+            <br><br><br><br><br>
             <div class="reviewcontent"><p>Vas a montar una web y necesitas mi review? Llevas 3 meses para poner las cortinas del cuarto de la niña.</p></div>
             <p class="reviewname">Mi mujer - Cheltenham, UK</p>
             <div class="reviewstars">
@@ -96,8 +97,9 @@
             </div>
         </div>  
     </div>
-    <div><p class="disclaimer">All reviews have been collected by <a href="#">Shopper's Approved</a>, an individual third party.</p></div>
     <div><img class="reviewimage" src="img/shopperapproved.jpg"></div>
+    <div><p class="disclaimer">All reviews have been collected by <a href="#">Shopper's Approved</a>, an independent third party.</p></div>
+    
     <div>
         <div class="footerblock"><p>Footer Content</p></div>
     </div>
