--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tirso es un profesional del marketing digital, ecommerce y propiedad industrial.">
     <title>Tirso Personal</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="ico" href="img/icon.png">
+    <link rel="shortcut icon" type="ico" href="/img/favicon.ico">
 </head>
 <body>
     <nav class="nav">
@@ -22,6 +22,17 @@
                 </ul>
             </div>
     </nav>
+<!--Presentation-->
+    <div class="presentation">
+        <div class="fotoblock">
+            <img class="fototirso" src="/img/tirso.jpg" alt="foto Tirso">
+        </div>
+        <div class="presentation-block">
+            <h1>Un poco sobre mí</h1>
+            <p>Soy Tirso García profesional multidisciplinar. Siendo mi especialidad el Marketing Digital.</p>
+            <p>Trabajo en remoto para varias empresas a las que les hago trabajos de consultoría en mis areas de especialización. Si quieres saber mas, <a class="callto" href="mailto:contacto@tirsog.es">¡escríbeme!</a></p>
+        </div>
+    </div>
 <!--Color testing-->
     <div class="cajacolores">
         <div class="textsize"><p >Esta es una <span class="colorfont1">muestra</span> de los <span class="colorfont2">colores</span> usados en <span class="colorfont3">algunas</span> palabras para ver <span class="colorfont4"> tal se ven.</span></p>
