--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--Presentation-->
     <div class="presentation">
         <div class="fotoblock">
-            <img class="fototirso" src="/img/tirso.jpg" alt="foto Tirso">
+            <img class="fototirso" src="img/tirso.jpg" alt="foto Tirso">
         </div>
         <div class="presentation-block">
             <h1>Un poco sobre mí</h1>
@@ -33,7 +33,7 @@
             <p>Trabajo en remoto para varias empresas a las que les hago trabajos de consultoría en mis areas de especialización. Si quieres saber mas, <a class="callto" href="mailto:contacto@tirsog.es">¡escríbeme!</a></p>
         </div>
     </div>
-<!--Color testing-->
+<!--Color testing
     <div class="cajacolores">
         <div class="textsize"><p >Esta es una <span class="colorfont1">muestra</span> de los <span class="colorfont2">colores</span> usados en <span class="colorfont3">algunas</span> palabras para ver <span class="colorfont4"> tal se ven.</span></p>
         <p>Se pueden <span class="colorfont5">modificar fácilmente</span> para ir testeando <span class="colorfont6">los colores.</span></p></div>
@@ -47,7 +47,7 @@
             <div class="color5"><p class="fonttitle">Gris fondo</p></div>
             <div class="color6"><p class="fonttitle">Rosa suave</p></div>
         </div>
-    </div>
+    </div>-->
     <!--First Section-->
    <div class="impar">
         <div>
