--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tirso es un profesional del marketing digital, ecommerce y propiedad industrial.">
     <title>Tirso Personal</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="ico" href="/img/favicon.ico">
+    <link rel="shortcut icon" type="ico" href="img/favicon.ico">
 </head>
 <body>
     <nav class="nav">
