--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>
-        Página en proceso de creación. Pasiensia pofabor.
+        Página en proceso de creación. Pasiensia pofabor.<a href="/reviews">Link</a>
     </h1>
       <div class="contact">
           
