--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
 <body>
     <h1>
-        Página en proceso de creación. Pasiensia pofabor.<a href="/reviews">Link</a>
+        Test Site
     </h1>
+    <br>
+    <ul>
+       <li><a href="/reviews">Reviews</a></li> 
+       <li><a href="/olark">Olark</a></li> 
+       <li><a href="/Zendesk">Zendesk<a></li> 
+    </ul>
+
       <div class="contact">
           
           <form name="contact" method="POST" data-netlify="true">
