--- a/zendesk/index.html
+++ b/zendesk/index.html
@@ -11,5 +11,8 @@
 </head>
 <body>
     <div>
+        <!-- Start of igerent Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=49e710b1-6324-464e-b276-6bfd27e3ea56"> </script>
+<!-- End of igerent Zendesk Widget script -->
     </div>
 </body>
