Chat wdiget contents

--- a/zendesk/index.html
+++ b/zendesk/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Test Chat">
     <link rel="stylesheet" href="styles2.css">
     <link rel="shortcut icon" type="ico" href="img/favicon.png">
     <title>Tirso G. - Project Management y Gestion de Marca</title>
 </head>
 <body>
+    <h1>Test Chat Olark</h1>
+    <div>
+        <p>Test olark.</p>
+            <img src="/img/shopperapproved.jpg">
+    </div>
     <div>
         <!-- Start of igerent Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=49e710b1-6324-464e-b276-6bfd27e3ea56"> </script>
