--- a/olark/index.html
+++ b/olark/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Test Chat">
     <link rel="stylesheet" href="styles2.css">
     <link rel="shortcut icon" type="ico" href="img/favicon.png">
-    <title>Tirso G. - Project Management y Gestion de Marca</title>
+    <title>Olark Test</title>
 </head>
 <body>
     <h1>Test Chat Olark</h1>
