Chat wdiget contents

--- a/zendesk/index.html
+++ b/zendesk/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Test Chat">
     <link rel="stylesheet" href="styles2.css">
     <link rel="shortcut icon" type="ico" href="img/favicon.png">
-    <title>Tirso G. - Project Management y Gestion de Marca</title>
+    <title>Zendesk Test</title>
 </head>
 <body>
-    <h1>Test Chat Olark</h1>
+    <h1>Test Chat Zendesk</h1>
     <div>
-        <p>Test olark.</p>
+        <p>Test Zendesk.</p>
             <img src="/img/shopperapproved.jpg">
     </div>
     <div>
