Chat Widget test 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <li><a href="/reviews">Reviews</a></li> 
        <li><a href="/olark">Olark</a></li> 
        <li><a href="/Zendesk">Zendesk<a></li> 
-        <li><a href="/personal/nochat/">No Chat<a></li> 
+        <li><a href="/nochat">No Chat<a></li> 
     </ul>
 
       <div class="contact">
