--- a/index2.html
+++ b/index2.html
@@ -9,27 +9,50 @@
     <title>Tirso Personal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="ico" href="img/favicon.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <div class="width100">
-        <div style="width: 800px;">
-            <nav class="nav">
-                <div class="icon-container"><img class="icon" src="img/icon.png" alt="personal logo"></div>
-                <div class="nav-list">
-                    <ul>
-                        <li class="nav-items"><a href="#" alt="Servicios"></a>Servicios</li>
-                        <li class="nav-items"><a href="#" alt="Registro de Marcas"></a>Registro de Marcas</li>
-                        <li class="nav-items"><a href="#" alt="Sobre mí"></a>Sobre mí</li>
-                        <li class="nav-items"><a href="#" alt="Blog"></a>Articulos</l>
-                        <li class="nav-items callto"><a href="#" alt="Contacto"></a>Contacto</li>
-                    </ul>
-                </div>
-        </div>
+    <!-- elementos del menu -->
+    <!--
+            <div class="menu" id="menu">
+              <ul class="lista_menu">
+                <li>
+                  <a href="#sec_laclinica" onclick="ToggleMenu()">La Clínica</a>
+                </li>
+                <li>
+                  <a href="#sec_servicios" onclick="ToggleMenu()">Servicios</a>
+                </li>
+                <li><a href="#sec_planes" onclick="ToggleMenu()">Planes</a></li>
+                <li><a href="#sec_packs" onclick="ToggleMenu()">Packs</a></li>
+                <li><a href="#sec_equipo" onclick="ToggleMenu()">Equipo</a></li>
+                <li>
+                    <a href="#sec_contacto" onclick="ToggleMenu()">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
+      </div>
+    -->
+    <!--Cabecera-->
+    <div class="cabecera">
+        <div id="contenedor_cabecera">
+            <img class="icon" src="img/icon.png" alt="personal logo">
+            <span class="material-icons boton_menu"> menu </span>
+            <nav class="nav" id="togglemenu">
+                <ul>
+                    <li class="nav-items"><a href="#" alt="Servicios"></a>Servicios</li>
+                    <li class="nav-items"><a href="#" alt="Registro de Marcas"></a>Registro de Marcas</li>
+                    <li class="nav-items"><a href="#" alt="Sobre mí"></a>Sobre mí</li>
+                    <li class="nav-items"><a href="#" alt="Blog"></a>Articulos</l>
+                    <li class="nav-items"><a href="#" alt="Contacto"></a>Contacto</li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <!--Presentation-->
-    <div class="presentation">
+    <!--<div class="presentation">
         <div class="fotoblock">
             <img class="fototirso" src="img/tirso.jpg" alt="foto Tirso">
         </div>
@@ -57,7 +80,7 @@
         </div>
     </div>-->
     <!--First Section-->
-    <div class="impar">
+   <!-- <div class="impar">
         <div>
             <img class="working" src="img/working.svg">
         </div>
@@ -78,7 +101,7 @@
         </div>
     </div>
     <!--Review Block-->
-    <div class="reviewblock">
+    <!--<div class="reviewblock">
         <div>
             <p class="reviewname">Mi madre</p>
             <p class="reviewdate">11 Dec 2020</p>
@@ -214,7 +237,7 @@
         <div class="footerblock">
             <p>Footer Content</p>
         </div>
-    </div>
+    </div>-->
 </body>
-
+<script src="/menu.js"></script>
 </html>
