Fix nav links and img height

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tirso es un profesional del marketing digital, ecommerce y propiedad industrial.">
-    <title>Tirso Personal</title>
+    <title>Tirso G. - Project Management y Gestion de Marca</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="ico" href="img/favicon.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -42,11 +42,11 @@
             <span class="material-icons boton_menu"> menu </span>
             <nav class="nav" id="togglemenu">
                 <ul>
-                    <li class="nav-items"><a href="#" alt="Servicios"></a>Servicios</li>
-                    <li class="nav-items"><a href="#" alt="Registro de Marcas"></a>Registro de Marcas</li>
-                    <li class="nav-items"><a href="#" alt="Sobre mí"></a>Sobre mí</li>
-                    <li class="nav-items"><a href="#" alt="Blog"></a>Articulos</l>
-                    <li class="nav-items"><a href="#" alt="Contacto"></a>Contacto</li>
+                    <li class="nav-items"><a href="#" alt="Servicios">Servicios</a></li>
+                    <li class="nav-items"><a href="#" alt="Registro de Marcas">Registro de Marcas</a></li>
+                    <li class="nav-items"><a href="#" alt="Sobre mí">Sobre mí</a></li>
+                    <li class="nav-items"><a href="#" alt="Blog">Articulos</a></l>
+                    <li class="nav-items"><a href="#" alt="Contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
