--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </div>
     </div>
-    
+
     <!--<div>
         <img src="/img/close.svg" alt="Close Button">
         <img src="/img/hamburger.svg" alt="Hamburger Button">
@@ -221,8 +221,17 @@
             <p>Footer Content</p>
         </div>
     </div>-->
-<!----------Contact Area---------->
-   <!-- <div class="contact">
+<!----------Calendly Widget---------->
+    <div class="calendly-inline-widget" style="min-width:320px;height:580px;" data-auto-load="false">
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+        <script>
+            Calendly.initInlineWidget({
+                url: 'https://calendly.com/tirsog'
+            });
+        </script>
+    </div>
+<!----------Netlify Contact Form---------->
+    <div class="contact">
         <form name="contact" method="POST" data-netlify="true">
             <p><label>Nombre <input type="text" name="name" /></label></p>
             <p><label>Email: <input type="email" name="email" /></label></p>
@@ -230,7 +239,8 @@
             <p><label>Añadir Archivo <input type="file" name="picture" /></label></p>
             <p><button type="submit">Enviar</button></p>
         </form>
-    </div>-->
+    </div>
+
 
 </body>
 <!----------Scripts---------->
