--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 </body>
 <!----------Scripts---------->
 
-<!----------Chatwoot---------->
+<!----------Chatwoot----------
 <script>
     (function(d,t) {
       var BASE_URL="https://chatwoot-test-igerent.herokuapp.com";
@@ -254,7 +254,7 @@
       }
     })(document,"script");
   </script>
-<!----------Chatwoot---------->
+--------Chatwoot---------->
 
 <script src="/menu.js"></script>
 
