--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--<div>
         <img src="/img/close.svg" alt="Close Button">
         <img src="/img/hamburger.svg" alt="Hamburger Button">
-    </div>
+    </div>-->
     <!--Presentation-->
     <!--<div class="presentation">
         <div class="fotoblock">
