--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img class="working" src="img/working.svg">
         </div>
     </div>
-    <!--Review Block-->
+    Review Block-->
     <!--<div class="reviewblock">
         <div>
             <p class="reviewname">Mi madre</p>
